<resources>
    <string name="app_name">Livraria</string>
    <string name="product_name">Nome:</string>
    <string name="price">Preço:</string>
    <string name="quantity">Quantidade:</string>
    <string name="supplier_name">Nome do Fornecedor:</string>
    <string name="supplier_phone_number">Telefone do Fornecedor:</string>

    <string name="hint_product_name">Nome</string>
    <string name="hint_price">R$</string>
    <string name="hint_quantity">0</string>
    <string name="hint_supplier_name"> </string>
    <string name="hint_supplier_phone_number">99 9999 9999</string>

    <string name="action_save">Save</string>
    <string name="add_book">Add a Book</string>
    <string name="BookInserted">Book Inserted</string>
    <string name="error">An error occurred during the operation</string>
    <string name="incorretValues">Valores inseridos estao incorretos</string>
    <string name="UsuarioTexto">Usuário</string>
    <string name="NomeTexto">Nome</string>
    <string name="PrecoTexto">Preço</string>
    <string name="QuantidadeTexto">Quantidade</string>
    <string name="FornecedorNomeTexto">Nome do Fornecedor</string>
    <string name="FOrnecedorTelefoneTexto">Telefone do Fornecedor</string>
    <string name="ProdutoTexto">Produto</string>
    <string name="FornecedorTexto">Fornecedor</string>
    <string name="action_delete">Delete</string>
    <string name="edit_book">Edit a book</string>
    <string name="errorUpdating">Error in update</string>
    <string name="updated">Row updated</string>
    <string name="errorDeleting">Error while deleting</string>
    <string name="deleted">Product was deleted</string>
    <string name="delete_dialog_msg">Are you sure you want delete this?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">If you exit changes will be lost</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="empty_view_title_text">No data</string>
    <string name="empty_view_subtitle_text">Add new itens</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="Sale">Sale</string>
    <string name="errorQuantity">Quantidade minima atingida</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="minimumValue">Minimum value reached</string>
</resources>
